--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -194,6 +194,22 @@
 
         </div>
 
+
+      <div style="display: flex;">
+        {% if data['eu-logo-selected'] %}
+        <img src="/public/images/partner11.jpg" style="width:240px; height:100px;">
+        {% endif %}
+        {% if data['dit-logo-selected'] %}
+        <img src="/public/images/partner12.jpg" style="width:240px; height:100px;">
+        {% endif %}
+        {% if data['growth-logo-selected'] %}
+        <img src="/public/images/partner13.jpg" style="width:240px; height:100px;">
+        {% endif %}
+        {% if data['bw-logo-selected'] %}
+        <img src="/public/images/partner14.jpg" style="width:240px; height:100px;">
+        {% endif %}
+      </div>
+
     </div>
 
   </div>
