--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -51,18 +51,24 @@ GOV.UK prototype kit
                 <br>
 
                 <div id=top-row" display="flex" style="margin-bottom:30px">
-                  <div style="float:left; width:41%;">
+                  <div style="float:left; width:39%;">
+                    <!--  This infomation is now clear enough from the front page
                     <p><span class="heading-xlarge">{{session.ticketsSoldPercentage}}%</span> of tickets sold</p>
-                  </div>
-                  <div style="float:left; width:31%; margin-top:8px;" display="flex">
+                    -->
                     <div>
                       <p><span class="heading-large">{{data['attendee-quantity'] - data['attendee-reg-count']}}</span> tickets remaining</p>
                     </div>
                   </div>
-                  <div style="float:right; width:28%;  margin-top:8px;">
-                    <div style="margin-left:40px">
+                  <div style="float:left; width:33%; margin-top:0px;" display="flex">
+                    <div style="margin-left:0px">
                       <p style="margin-bottom:0px"><span class="heading-large">{{data['attendee-quantity']}}</span> ticket capacity</p>
                       <p style="margin-top:0px"><a href="/create-event/tickets">Change event capacity</a></p>
+                    </div>
+                  </div>
+                  <div style="float:right; width:28%;  margin-top:0px;">
+                    <div style="margin-left:40px">
+                      <p class="heading-small" style="margin-top:10px;">Event organiser</p>
+                      <p style="margin-top:0px">Alex Smith</p>
                     </div>
                   </div>
                 </div>
@@ -73,7 +79,7 @@ GOV.UK prototype kit
                 <br>
 
                 <div id=middle-row" display="flex">
-                  <div style="float:left; width:41%; ">
+                  <div style="float:left; width:39%; ">
                     <div style="width:74%">
 
                       <p style="margin-bottom:5px">Visitors to event page</p>
@@ -94,7 +100,7 @@ GOV.UK prototype kit
                   </div>
 
 
-                  <div style="float:left; width:31%; margin-top:0px;" display="flex">
+                  <div style="float:left; width:33%; margin-top:0px;" display="flex">
                     <div>
 
                       <p style="margin-bottom:5px">Total registrations</p>
