--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -41,6 +41,17 @@
 			  </div>
 
 			  <div>
+				  <dt class="cya-question" style="vertical-align:top">Event owner</dt>
+				  <dd class="cya-answer">{{ data['owner-name'] }}
+				  </dd>
+				  <dd class="cya-change" style="vertical-align:top">
+					  <a href="/create-event/change-organiser">
+						  Change
+					  </a>
+				  </dd>
+			  </div>
+
+			  <div>
 				  <dt class="cya-question" style="vertical-align:top">Event organiser</dt>
 				  <dd class="cya-answer">
 					  Department for International Trade
