--- a/app/views/create-event/tickets.html
+++ b/app/views/create-event/tickets.html
@@ -97,7 +97,10 @@
 
 		  <fieldset class="form-group" style="margin-bottom:0px; margin-top:10px;">
 
+			  <!-- Try without this as the page is getting way to busy -->
+			  <!--
 			  <p class="panel panel-border-narrow" style="padding-bottom:15px;">Registration will automatically close at 12:00 on the day of the event</p>
+			-->
 
 			  <label class="form-label-bold">
 				  Do you want to edit the closure date?
@@ -105,7 +108,7 @@
 			  <div class="form-date" style="margin-top:5px">
 				  <div class="multiple-choice" style="margin-bottom:10px">
 					  <input id="radio-days-before-no" type="radio" name="radio-close-early-yes-no" value="no" checked="checked">
-					  <label for="radio-days-before-no">No, shut registrations on the day of the event</label>
+					  <label for="radio-days-before-no">No, shut registrations at 12:00 on the day of the event</label>
 				  </div>
 				  <div class="multiple-choice" style="margin-bottom:10px"  data-target="date-selection-area">
 					  <input id="radio-days-before-yes" type="radio" name="radio-close-early-yes-no" value="yes" >
