--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -42,7 +42,6 @@
 				{% if errorPostcode %}
 				<li><a href="#date-area">Address: postcode</a></li>
 				{% endif %}
-
 			</ul>
 
 		</div>
@@ -63,7 +62,6 @@
 
 
 			  	<div class="form-group {% if errorBuilding %} form-group-error {% endif %}">
-
 
 				  <label class="form-label-bold" for="building"  style="margin-bottom:5px;  ">Venue and street</label>
 				  {% if errorBuilding %}
@@ -107,7 +105,7 @@
 
 
 
-				  <!--  LOCATION NOTeS-->
+				  <!--  LOCATION NOTES-->
 				  <div class="form-group" style="margin-top:0px; margin-bottom:0px">
 					  <label class="form-label-bold" for="venue-additional-notes">
 						  Additional venue details (optional)
