--- a/app/views/create-event/template-reg.html
+++ b/app/views/create-event/template-reg.html
@@ -63,10 +63,10 @@
 
 		  <p style="margin-left:5px; margin-top:5px;"><a href="#">Map of venue</a></p>
 
-
-		  <p class="heading-small" style="margin-left:5px; ">Additional venue details</p>
-		  <p style="margin-left:5px; margin-top:5px; margin-bottom:40px;">  {{ data['venue-additional-notes'] }} </p>
-
+		  {% if data['venue-additional-notes-entered'] == true %}
+			  <p class="heading-small" style="margin-left:5px; ">Additional venue details</p>
+			  <p style="margin-left:5px; margin-top:5px; margin-bottom:40px;">  {{ data['venue-additional-notes'] }} </p>
+		  {% endif %}
 
 					<textarea class="form-control" name="event-reg-body" id="event-reg-body" rows="20" style="width: 80%;"
 					>We really hope that you enjoy the experience and that it will be a valuable part of your business export journey with us.
