fixes and upgrades to the tracking links

--- a/app/views/create-event/go-live.html
+++ b/app/views/create-event/go-live.html
@@ -65,16 +65,14 @@
 		</div>
 
 
+		<form action="/make-draft-live" method="get" class="form">
+
+
 		<div style="margin-top:60px; margin-bottom:20px;">
 			<p class="heading-medium">Tracking links</p>
-			{% include "includes/tracking-links.html" %}
+			{% include "includes/tracking-links-go-live.html" %}
 		</div>
 
-
-
-
-
-		<form action="/make-draft-live" method="get" class="form">
 
 		  <div class="form-group" style="margin-top:20px">
 			  <input type="submit" class="button" value="Make the event live">
