--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -124,7 +124,7 @@
         </div>
 
 
-        <form action="/create-event/go-live" method="get" class="form">
+        <form action="/create-event/go-live-now" method="get" class="form">
 
           <div style="margin-left:20px; margin-right:30px; margin-top:10px; float: right;">
             <input type="submit" class="button-grey" value="Make event live" style="margin-bottom:35px; width:170px;">
