--- a/app/views/includes/tracking-links-go-live.html
+++ b/app/views/includes/tracking-links-go-live.html
@@ -6,7 +6,7 @@
   <td style="padding-top:25px; padding-bottom:20px;">{{ session.eventsLiveURLS[session.currentEventShowing][1][number] }}</td>
   <td style="padding-top:15px; padding-bottom:15px;" >
     <div>
-      <input style="float:right;" type="submit" class="button-secondary" formaction="/monitor/live-present#track-links" value="Copy to clipboard">
+      <input style="float:right;" type="submit" class="button-secondary" formaction="/create-event/go-live" value="Copy to clipboard">
     </div>
   </td>
 </tr>
@@ -82,7 +82,7 @@
     </td>
 
     <td style="padding-top:15px; padding-bottom:15px;" >
-      <input type="submit" class="button" formaction="/monitor/add-tracking-link" value="Save">
+      <input type="submit" class="button" formaction="/add-tracking-link-go-live" value="Save">
     </td>
   </tr>
 
